[package]
name = "stack-safe"
version = "0.0.1"
authors = ["Martin Huschenbett <martin.huschenbett@posteo.me>"]
edition = "2021"
publish = false
description = "An attribute macro to make recursive functions stack-safe"
homepage = "https://github.com/hurryabit/stack-safe#readme"
repository = "https://github.com/hurryabit/stack-safe.git"
license = "Apache 2.0"

[dependencies]
clap = "~2.33.3"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "tarjan"
harness = false

[[bench]]
name = "list"
harness = false

[[bench]]
name = "tree"
harness = false
