[package]
name = "stack-safe"
version = "0.0.1"
authors = ["Martin Huschenbett <martin.huschenbett@posteo.me>"]
edition = "2021"
publish = false
description = "An attribute macro to make recursive functions stack-safe"
homepage = "https://github.com/hurryabit/stack-safe#readme"
repository = "https://github.com/hurryabit/stack-safe.git"
license = "Apache 2.0"

[dependencies]
static_assertions = "1.1.0"
clap = "~2.33.3"
rand = "0.8.4"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[profile.release]
panic = "abort"

[[bench]]
name = "tarjan"
harness = false

[[bench]]
name = "list"
harness = false

[[bench]]
name = "tree"
harness = false

[[bench]]
name = "calc"
harness = false
